# Vital_CHD_Bayes

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  data_io.py  generate_predictive_report.py  holdout_analysis.py  holdout_sensitivity.py  inference.py  io.py  model_weibull_ph.py  predictive.py  priors.py  reporting.py  run_experiments.py  run_gpt4_inference.py  run_gpt5_inference.py  run_holdout_experiment.py  run_inference_only.py  run_predictive_only.py
src/vital_chd_bayes/: __init__.py
